# pico-c-template

./: LICENSE  README.md
.github/workflows/: build-firmware.yml
circuit/: .gitignore  circuit.kicad_pro  circuit.kicad_sch
firmware/: CMakeLists.txt  upload-usb.sh
firmware/src/: main.c
tools/: upload-server.py
